# netsuite-cli

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-10-agent-skill.html  2026-07-10-netsuite-cli.html  2026-07-14-saved-search-soap.html  2026-07-14-special-ops.html  2026-07-15-setup-ux-tba-onboarding.html  2026-07-15-skill-self-update.html  2026-07-20-account-login-discovery.html
docs/superpowers/specs/: 2026-07-09-netsuite-cli-design.html  2026-07-10-agent-skill-design.html  2026-07-14-soap-saved-search-design.html  2026-07-14-special-ops-design.html  2026-07-15-setup-ux-tba-onboarding-design.html  2026-07-15-skill-self-update-design.html  2026-07-17-account-login-embedded-credentials-design.html  (+1 more)
skills/netsuite-cli/: SKILL.md
src/: account.rs  builtin.rs  cli.rs  client.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  output.rs  secrets.rs
src/auth/: authcode.rs  loopback.rs  m2m.rs  mod.rs  tba.rs
src/commands/: account.rs  cert.rs  config_cmd.rs  describe.rs  job.rs  mod.rs  raw.rs  record.rs  restlet.rs  saved_search.rs  skill.rs  suiteql.rs  system.rs  update.rs
src/soap/: envelope.rs  mod.rs  parse.rs  search_types.rs
tests/: account_commands.rs  authcode.rs  cert_commands.rs  client.rs  config_cmd.rs  describe_commands.rs  live_smoke.rs  m2m_auth.rs  record_commands.rs  record_special_ops.rs  restlet_raw_job.rs  saved_search_commands.rs  skill_commands.rs  suiteql_commands.rs  system_commands.rs  tba_auth.rs
tests/common/: mod.rs
